--- a/css/style.css
+++ b/css/style.css
@@ -1,315 +1,94 @@
-
-body{
-    border:3px solid #363795;
+body {
+    border: 3px solid #363795;
+    margin: 0;
+    font-family: Arial, sans-serif;
 }
+
 .container-fluid {
+    background-color: brown;
     border-radius: 10px;
     border-style: solid;
-    border: 0;
-    background-color: brown;
+    border-width: 0;
+    padding: 0;
+    margin: 0;
 }
 
-.image {
-    height: 0px;
-    width: 10px;
-    border-radius: 20%;
+.position-fixed {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.bg-info {
+    background-color: #17a2b8;
+}
+
+.text-dark {
+    color: #343a40;
+}
+
+.fw-bolder {
+    font-weight: bolder;
 }
 
 img {
     height: 60px;
     width: 60px;
     border-radius: 20%;
-    z-index: -1;
+    display: block;
+    margin: 0 auto;
 }
 
-.header {
-    border-radius: 5px;
-    background-color: blueviolet;
-}
-
-.footer {
-    width: 300px;
-    height: 600px;
-    background-color: rgb(255, 255, 255);
-    /* margin-top: 200px; */
-}
-
-.text {
-    height: 36px;
-    font-size: 12px;
-    border-radius: 0px 0px 6px 6px;
-    border: 0px;
-}
-
-.button {
-
-    height: 45px;
-    background-color: rgb(33, 47, 237);
-    color: white;
-    /* transition-duration: 0.2s; */
-    background-position-y: bottom;
-    border-radius: 14px;
-    border: 0px;
-}
-
-.button:active {
-    background-color: rgb(97, 97, 209);
-    color: white;
-
-}
-
-.heading {
-    width: 300px;
-    margin-left: 25px;
-    text-align: center;
-    font-size: 15px;
-    font-weight: bold;
-    color: white;
-    text-shadow: 2px 2px 5px black;
-}
-
-.subcontainer {
-    /* margin-top:6%; */
-    overflow: auto;
-}
-
-.message {
-    height: 100px;
-    border-radius: 10px;
-}
-
-#change-text {
-    font-size: 20px;
+.col-12 {
+    width: 100%;
+    box-sizing: border-box;
 }
 
 #div1 {
-    position: relative; 
-    height: 200px; 
-    margin-top: 10%;;
+    position: relative;
+    padding: 20px;
+    margin-top: 80px; /* Adjusted to account for fixed header */
+    background: linear-gradient(-105deg, #009acc, #363795);
     border-radius: 9px;
-    padding: 20px; 
-    text-overflow: ellipsis;
-    background-color: linear-gradient(-105deg, #009acc, #363795);
 }
-p {
+
+#div1 p {
     background-color: blueviolet;
     color: rgb(250, 248, 248);
     padding: 10px;
     border-radius: 0px 10px 10px 10px;
-    left: 100px;
     box-shadow: 2px 2px 5px rgb(63, 63, 138);
     font-size: 14px;
-    /* opacity: 0; */
-}
- 
-#div4 p{
-    background-color: rgba(5, 232, 141, 0.919);
-    color: rgb(10, 1, 1);
-    margin-top: 20px;
-    padding: 10px;
-    border-radius: 0px 10px 10px 10px;
-    left: 100px;
-    box-shadow: 2px 2px 5px rgb(63, 63, 138);
-    font-size: 14px;
-    /* opacity: 1; */
-}
-
-#head {
-    color: rgb(248, 245, 245);
-    margin-top: 0;
-    padding: 10px;
-    border-radius: 0px 10px 10px 10px;
-    left: 100px;
-    font-size: 14px;
-    /* opacity: 1; */
-}
-
-#div2 {
-    background-color: lightgray;
-    box-shadow: none;
-}
-
-#intro {
-    background-color: blueviolet;
-    /* animation: slideAnimationintro 1s ease-in-out; */
-}
-/* 
-@keyframes slideAnimationintro {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0%);
-        opacity: 1;
-    }
-}
-
-#info {
-
-    background-color: blueviolet;
-    color: white;
-    animation: slideAnimationinfo 1s ease-in-out;
-    animation-delay: 1s;
-
-}
-
-@keyframes slideAnimationinfo {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0%);
-        opacity: 1;
-    }
-}
-
-#prastavsthiti {
-
-    background-color: blueviolet;
-    animation: slideAnimationprastavsthiti 1s ease-in-out;
-    animation-delay: 2s;
-    color: white;
-}
-
-@keyframes slideAnimationprastavsthiti {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0%);
-        opacity: 1;
-    }
+    margin: 10px 0;
 }
 
 #div4 p {
-    animation: slideAnimationdiv4 1s ease-in-out;
-    animation-delay: 0s;
-    color: rgb(15, 14, 14);
-}
-@keyframes slideAnimationdiv4 {
-    0% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-
-    100% {
-        transform: translateX(0%);
-        opacity: 1;
-    }
-} */
-
- 
-
-
-#Refresh {
-    width: 300px;
-    height: 30px;
-    background-color: rgba(22, 20, 20, 0.836);
-    color: rgb(255, 250, 250);
-    position: fixed;
+    background-color: rgba(5, 232, 141, 0.919);
+    color: rgb(10, 1, 1);
+    margin: 20px 0;
+    padding: 10px;
+    border-radius: 0px 10px 10px 10px;
+    box-shadow: 2px 2px 5px rgb(63, 63, 138);
+    font-size: 14px;
 }
 
-.btn {
-    margin: 5px;
-    width: 230px;
-    height: 48px;
-    padding: 2px;
-    background-color: rgb(187, 50, 78);
-    color: rgb(254, 254, 254);
-    border-radius: 12px;
-    /* transition-duration: 0.1s; */
-    cursor: pointer;
-    border: 0px;
-}
-
-.btn:hover {
-
-    color: rgb(255, 255, 255);
-
-    box-shadow: 2px 2px 10px #af4359d8;
-
-}
-
-.btn:active {
-    color: rgb(124, 119, 119);
-    background-color: rgb(87, 157, 238);
-}
-
-p {
-    text-align: justify;
-}
-
-p:hover {
-    cursor: pointer;
-}
-
-table {
-    border: 1px solid black;
-    padding: 2px;
-    background-color: #333;
-    color: white;
-    text-align: center;
-}
-tr{
-    border: 1px solid black;
-    padding: 2px;
-    text-align: left;
-}
-th{
-    border: 1px solid black;
-    padding: 2px;
-    text-align: left;
-
-}
-td {
-    border: 1px solid black;
-    padding: 2px;
-    text-align: left;
-    
-}
-
-input[type="text"] {
-    font-size: 16px;
-    font-weight: bold;
-  
-}
-
-.reload {
-    width: 300px;
-    height: 70px;
-    background-color: rgb(63, 245, 35);
- 
-}
-
-#reload-btn {
-    width: 300px;
-    height: 70px;
-    text-align: center;
-    background-color: aqua;
-    color: rgb(16, 1, 1);
-
-}
-/*search box css*/
 .form-container {
-    /* background: rgb(187, 50, 78); */
+    background: rgb(187, 50, 78);
     color: white;
     border-radius: 8px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-
-    width: 100%;
+    margin: 20px 0;
 }
+
 .form-container label {
     display: block;
     margin-bottom: 10px;
     font-size: 16px;
 }
+
 .form-container input[type="text"] {
     width: calc(100% - 22px);
     padding: 10px;
@@ -318,6 +97,7 @@ input[type="text"] {
     margin-bottom: 20px;
     font-size: 16px;
 }
+
 .form-container button {
     background-color: #007BFF;
     color: white;
@@ -327,37 +107,90 @@ input[type="text"] {
     font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    width:100%;
+    width: 100%;
 }
+
 .form-container button:hover {
     background-color: #0056b3;
 }
 
-/* end search box css */
+table {
+    border-collapse: collapse;
+    width: 100%;
+    margin: 20px 0;
+}
 
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: left;
+    color: white;
+    background-color: #333;
+}
 
-/* For Mobile Phones Portrait or Landscape View */
- @media (min-width: 640px) {
+th {
+    background-color: #444;
+}
 
+@media (max-width: 768px) {
+    img {
+        height: 50px;
+        width: 50px;
     }
-    .plus{
-        width:20px;
-        height: 20px;
-        background-color: rgb(255, 255, 255);
-        
+
+    #div1 {
+        padding: 15px;
+        margin-top: 70px;
     }
-    .plushorizontal{
-        margin: auto;
-        width:20px;
-        height: 5px;
-        background-color: rgb(19, 2, 2);
+
+    #div1 p {
+        font-size: 12px;
+        padding: 8px;
     }
-    .plusvertical{
-        margin: auto;
-        width:5px;
-        height:8px;
-        background-color: rgb(10, 1, 1);
-    } 
-    #div1{
-margin-top: 20%;
+
+    .form-container {
+        padding: 15px;
     }
+
+    .form-container input[type="text"] {
+        padding: 8px;
+        font-size: 14px;
+    }
+
+    .form-container button {
+        font-size: 14px;
+    }
+
+    table {
+        font-size: 14px;
+    }
+}
+
+@media (max-width: 480px) {
+    #div1 {
+        padding: 10px;
+        margin-top: 60px;
+    }
+
+    #div1 p {
+        font-size: 10px;
+        padding: 6px;
+    }
+
+    .form-container {
+        padding: 10px;
+    }
+
+    .form-container input[type="text"] {
+        padding: 6px;
+        font-size: 12px;
+    }
+
+    .form-container button {
+        font-size: 12px;
+    }
+
+    table {
+        font-size: 12px;
+    }
+}
