--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,8 @@
 
-body{
-    border:3px solid #363795;
-}
+html { overflow-y: scroll; }
+body { position: absolute; }
 .container {
-
+    position: fixed;
     border-radius: 10px;
     border-style: solid;
     border: 0;
