--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ img {
     background-color: linear-gradient(-105deg, #009acc, #363795);
 }
 p {
-    background-color: rgb(102 16 242);;
+    background-color: rgb(102 16 242);
     color: rgb(250, 248, 248);
     padding: 10px;
     border-radius: 0px 10px 10px 10px;
